crates/shipper/src/ops/auth/snapshots/shipper__ops__auth__credentials__tests__snapshots__snapshot_credentials_file_with_all_formats.snap
---
source: crates/shipper/src/ops/auth/credentials.rs
expression: "(crates_io, custom)"
---
(
    "registry-section",
    "custom-registry",
)
