crates/shipper/src/ops/auth/snapshots/shipper__ops__auth__credentials__tests__snapshots__snapshot_list_registries_many.snap
---
source: crates/shipper/src/ops/auth/credentials.rs
expression: registries
---
[
    "alpha",
    "beta",
    "crates-io",
    "delta",
    "gamma",
]
